# robp_workshop

./: .gitignore  README.md  debug.desktop  debug.sh  plot.desktop  plot.sh  simulator.desktop  simulator.sh  upload.desktop  upload.sh
controller/: package.xml  setup.py
controller/controller/: cartesian_controller.py  controller.py
display_markers/: package.xml  setup.py
display_markers/display_markers/: display.py
line_follower/: package.xml  setup.py
line_follower/line_follower/: line_follower_action_client.py  line_follower_action_server.py
odometry/: package.xml  setup.py
odometry/odometry/: odometry.py
perception/: package.xml  setup.py
perception/perception/: perception.py  plotting.py
robp_boot_camp/kobuki/kobuki_description/: setup.cfg  setup.py
robp_boot_camp/kobuki_soft/kobuki_softnode/: CMakeLists.txt
robp_boot_camp/kobuki_soft/kobuki_softnode/include/kobuki_softnode/: fake_kobuki.hpp
robp_boot_camp/kobuki_soft/kobuki_softnode/launch/: full_launch.xml
robp_boot_camp/kobuki_soft/kobuki_softnode/src/: fake_kobuki.cpp
robp_boot_camp/robp_boot_camp_launch/launch/: boot_camp_part1_launch.xml  boot_camp_part2_launch.xml  boot_camp_part3_launch.xml  rs_launch.py  workshop_launch.xml  workshop_sim_launch.xml  workshop_student_launch.xml
robp_boot_camp/robp_boot_camp_launch/rviz/: boot_camp_part1.rviz  boot_camp_part3.rviz  rpl_logo.eps
robp_boot_camp/robp_boot_camp_world/src/: world.cpp
robp_robot/robp_interfaces/: CMakeLists.txt
workspace/: package.xml  setup.py
workspace/workspace/: image.py  workspace.py
(+5 files in other folders)
